--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "firebase": "^7.21.0",
+    "google-map-react": "^2.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
