--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "google-map-react": "^2.1.5",
     "react": "^16.13.1",
